clean up args before passing to JakartaTransformerCLI